# optimalfxWebClient

./: Cargo.toml  Dockerfile
.github/workflows/: codeql.yml
public/assets/: index.html
public/assets/pages/: admin.html  login.html  register.html  test.html
public/assets/static/css/: forms.css  main.css  responsive.css  variables.css
public/assets/static/js/: client.js  forms.js  main.js
src/: main.rs
